<resources>
    <string name="app_name">SmartPlug</string>
    <string name="wellcome">Wellcome</string>
    <string name="smart">Smart</string>
    <string name="plug">Plug</string>
    <string name="email">Email</string>
    <string name="password">Şifre</string>
    <string name="newpassword">Yeni Şifre</string>
    <string name="newpasswordrepeature">Yeni Şifre Tekrar</string>
    <string name="passwordrepeature">Şifre Tekrar</string>
    <string name="remember">Beni Hatırla</string>
    <string name="forgetyourpassword"><u>Şifremi unuttum</u></string>
    <string name="action_settings">Settings</string>
    <string name="text">Text</string>
    <string name="chooseroom">Odayı Seçiniz</string>
    <string name="chooseyourcity">Şehir Şeçiniz</string>
    <string name="chooseyourdistrict">İlçe Şeçiniz</string>
    <string name="chooseyourneighborhood">Mahalle Şeçiniz</string>
    <string name="plugname">PRİZ ADI</string>
    <string name="plugs">Prİzler</string>
    <string name="notification">Bİldİrİm</string>
    <string name="settings">Ayarlar</string>
    <string name="add">EKLE</string>
    <string name="prizlerim">PRİZLERİM</string>
    <string name="current">Akım(A):</string>
    <string name="languagepart">Dil Kısmı</string>
    <string name="languagechangetitle">Dil Değiştirme</string>
    <string name="accont"><u>Hesabım var</u></string>
    <string name="emailrequired">Email gereklidir</string>
    <string name="emailplease">Lütfen geçerli eposta adresini giriniz</string>
    <string name="passwordrequired">Şifre gereklidir</string>
    <string name="passwordlen">Minimum şifre uzunluğu 6 olmalı</string>
    <string name="passworderror">Şifreler aynı değil</string>
    <string name="registed">Zaten kayıtlısınız</string>
    <string name="elektricrange">Elektrik Kullanım Aralıkları</string>
    <string name ="january">Ocak</string>
    <string name ="february">Şubat</string>
    <string name ="march">Mart</string>
    <string name ="april">Nisan</string>
    <string name ="may">Mayıs</string>
    <string name ="june">Haziran</string>
    <string name ="july">Temmuz</string>
    <string name ="august">Ağustos</string>
    <string name ="september">Eylül</string>
    <string name ="october">Ekim</string>
    <string name ="november">Kasım</string>
    <string name ="december">Aralık</string>
    <string name="languagechange">Dili Değiştirmek istediğine emin misin?</string>
    <string name="notificationpart">Bildirim</string>
    <string name="userprofile">Kullanıcı Profili</string>
    <string name="logout">Oturumu Kapat</string>
    <string name="address">Adres:</string>
    <string name="downtimenotice">Kesinti Bildirimi </string>
    <string name="addressdelete">Adres Sil</string>
    <string name="addressupdate">Adres Güncelle</string>
    <string name="addressupdateexample">Adresi güncellemek istediğine emin misin?</string>
    <string name="addressdeleteexample">Adresi silmek istediğine emin misin?</string>
    <string name="currentchart">Akım Grafiği</string>
    <string name="change">Değİştİr</string>
    <string name="plugdelete">Priz Sil</string>
    <string name="plugupdate">Priz Güncelle</string>
    <string name="plugupdateexample">Prizi güncellemek istediğine emin misin?</string>
    <string name="plugdeleteexample">Prizi silmek istediğine emin misin?</string>
    <string name="newplufadded">Yeni Priz Eklendi</string>
    <string name="error">Hata</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="enterthenameoftheplug">Prize Takılacak Cihazı Seçin</string>
    <string name="okey">Tamam</string>
    <string name="cancel">İptal</string>
    <string name="interruption"> Tarihinde elektrik kesintisi var</string>
    <string name="login">Gİrİş</string>
    <string name="signup">Kayıt ol</string>
    <string name="electrictariff">Elektrik Tarifeniz:</string>
    <string name="estimatedelectricusage">Tahmini Elektrik Kullanımı</string>
    <string name="electric">Enerji:</string>
    <string name="energy">Energy</string>
    <string name="kWh">kWh</string>
    <string name="cost">Tutar:</string>
    <string name="costt">cost</string>
    <string name="month">ay</string>
    <string name="electricalusageranges">Elektrik Kullanım Aralıkları</string>
    <string name="night">Gece</string>
    <string name="puant">Puant</string>
    <string name="morning">Sabah</string>
    <string name="currentt">Akım:</string>
    <string name="exit">Çıkış</string>
    <string-array name="array_name">
        <item>Salon</item>
        <item>Oturma Odası</item>
        <item>Yatak Odası</item>
        <item>Mutfak</item>
        <item>Çocuk Odası</item>
        <item>Koridor</item>
        <item>Mutfak</item>
        <item>Ekstra Oda</item>
    </string-array>
    <string-array name="array_plugName">
        <item>Buzdolabı</item>
        <item>Çamaşır Makinesi</item>
        <item>Bulaşık Makinesi</item>
        <item>TV</item>
        <item>Diğer Elektronik Cihazlar</item>
    </string-array>
    <string-array name="array_language">
        <item>Türkçe</item>
        <item>İngilizce</item>
    </string-array>
    <string-array name="array_electricitytime">
        <item>Elektrik Tarifenizi Seçiniz</item>
        <item>Sabah</item>
        <item>Puant</item>
        <item>Gece</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
