<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <LinearLayout
        android:id="@+id/sehirler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/address"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/adress_content"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:lines="3"
            android:textSize="13sp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/downtimenotice"
                android:textSize="12sp" />
            <android.support.v7.widget.SwitchCompat
                android:id="@+id/notification_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:checked="true" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/button_citydelete"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressdelete"
            android:layout_marginTop="2dp"
            android:textSize="12sp" />
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/button_cityupdate"
            android:layout_width="30dp"
            android:layout_height="30dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addressupdate"
            android:layout_marginTop="2dp"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>