<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="5sp"
    android:orientation="vertical"
    tools:context="com.thesis.bmm.smartplug.fragments.SettingsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/pink"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_about"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="6dp" />
        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/languagepart"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatSpinner
            android:theme="@style/mySpinnerItemStyle"
            android:id="@+id/spnlanguage"
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:entries="@array/array_language" />
        <Button
            android:id="@+id/btnlanguagechange"
            android:text="@string/change"
            android:textColor="@color/white"
            android:background="@drawable/button"
            android:layout_margin="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_about3"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="6dp" />
        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/userprofile"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <TextView
        android:id="@+id/logout"
        android:layout_margin="5dp"
        android:gravity="center"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_about2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="6dp" />
        <TextView
            android:layout_width="0sp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="@string/notificationpart"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_locationsList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </android.support.v7.widget.RecyclerView>

</LinearLayout>