<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.thesis.bmm.smartplug.activities.GraphicActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mor">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/back_btn"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                app:srcCompat="@drawable/ic_arrow_back_black_24dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">


        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/realTimeCurrentGraph"
            android:layout_width="match_parent"
            android:layout_height="123dp"></com.github.mikephil.charting.charts.LineChart>

        <TextView
            android:id="@+id/currentText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textColor="@android:color/background_dark"
            android:textSize="18sp"
            android:textStyle="bold|italic" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/estimatedelectricusage"
        android:textAlignment="center"
        android:textColor="@android:color/holo_purple"
        android:textSize="24sp"
        android:textStyle="bold|italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="63dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:text="Enerji:"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/energyTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:text="@string/electric"
                android:textAppearance="@android:style/TextAppearance"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/kwhTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/kWh"
                android:textColor="@android:color/background_dark"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:text="@string/cost"
                android:textColor="@android:color/holo_purple"
                android:textSize="18sp"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/costTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/costt"
                android:textColor="@android:color/background_dark"
                android:textSize="18sp"
                android:textStyle="bold|italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/beforeBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom"
                />

            <TextView
                android:id="@+id/dateTV"
                android:layout_width="wrap_content"
                android:layout_height="18dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="bottom"
                android:layout_marginBottom="1dp"
                android:gravity="center"
                android:text="@string/month"
                android:textAppearance="@android:style/TextAppearance"
                android:textColor="@android:color/holo_purple"
                android:textSize="12sp"
                android:textStyle="bold|italic" />

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/afterBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_alignParentBottom="true"
                android:layout_gravity="bottom|left|right|center"
                android:adjustViewBounds="false"
                />
        </LinearLayout>


    </LinearLayout>

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/dailyCurrentGraph"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </com.github.mikephil.charting.charts.PieChart>
</LinearLayout>
